<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="display1">　</string>
	<string name="display2">0</string>
	<string name="display3">""</string>
	<string name="app_name">Pocket Calclator</string>
	<string name="about_title">Pocket Calclator (Ver2.1)</string>

	<string name="includtaxes">MU</string>
	<string name="withouttaxes">MD</string>
	<string name="c">C</string>
	<string name="ce">CE</string>
	<string name="ca">CA</string>
	<string name="mplus">M+</string>
	<string name="mminus">M-</string>
	<string name="cm">CM</string>
	<string name="rm">RM</string>
	<string name="seven">7</string>
	<string name="eight">8</string>
	<string name="nine">9</string>
	<string name="percent">%</string>
	<string name="root">√</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="kakeru">X</string>
	<string name="waru">÷</string>
	<string name="one">1</string>
	<string name="two">2</string>
	<string name="three">3</string>
	<string name="plus">+</string>
	<string name="minus">-</string>
	<string name="plusminus">+/-</string>
	<string name="zero">0</string>
	<string name="zerozero">00</string>
	<string name="dot">.</string>
	<string name="equal">=</string>

	<string name="preftitle">Setting</string>
	<string name="presummary">You can set a tax rate between 1&#8211;100%</string>
	<string name="about">About</string>
	<string name="taxs">Setting Tax rate</string>
	<string name="toastmessege">Please retype 100 or under</string>
	<string name="theme_title">Select a Theme</string>
	<string name="theme_summary">Select a theme color from the list</string>
	<string name="errormessege">Error:Overflow</string>

	<string-array name="theme_array">
	    <item name="theme_indigo">Indigo</item>
	    <item name="theme_pink">Pink</item>
	    <item name="theme_teal">Teal</item>
	    <item name="theme_orange">Orange</item>
		<item name="theme_brown">Brown</item>
		<item name="theme_green">Green</item>
		<item name="theme_miku">Hatune Miku</item>
	</string-array>

	<string-array name="theme_pref">
	    <item name="indigo">0</item>
	    <item name="pink">1</item>
	    <item name="teal">2</item>
	    <item name="orange">3</item>
	    <item name="brown">4</item>
	    <item name="green">5</item>
		<item name="miku">6</item>
	</string-array>

	<string name="about_calc">Function of Ver2.1</string>

	<string name="dis_c"> Clear expect Memory</string>
	<string name="dis_ce"> Clear front of the indication and value</string>
	<string name="dis_ca"> Clear all</string>
	<string name="dis_mp"> Memory +</string>
	<string name="dis_mm"> Memory -</string>
	<string name="dis_cm"> Crear Memory</string>
	<string name="dis_rm"> Read Memory</string>
	<string name="dis_pm"> Change +-</string>
	<string name="dis_mu"> Mark up</string>
	<string name="dis_md"> Mark down</string>
	<string name="dis_par"> Value x ％ equel The ％ of the value</string>
	<string name="dis_ather">
1.Ather： four arithmetic operations and ather.\n
2.It can setting of the tax rate from a menu.\n
3.This apps enable to change a theme color.\n
4.This apps Support Android Wear provisionally!\n
	</string>
	<string name="dis_web">web</string>
	<string name="dis_author">Author：　Tomato Juice\n</string>

</resources>